--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <title>SinDy Bot</title>
+    <title>SinDy Bot V0.5</title>
     <link type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="normalize.css" />
     <link rel="stylesheet" type="text/css" href="layout.css" />
@@ -13,7 +13,7 @@
 <body>
 
   <div class="app-container">
-    <div class="app-header"><h1>SinDy Bot</h1></div>
+    <div class="app-header"><h1>SinDy Bot V.5</h1></div>
     <div class="app-content">
       <div class="time-indicator"><div class="time-indicator-content">8:20</div><hr /></div>
     </div>
