--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <title>SinDy Bot V0.5</title>
+    <title>SinDy Bot V0.4</title>
     <link type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="normalize.css" />
     <link rel="stylesheet" type="text/css" href="layout.css" />
@@ -11,24 +11,19 @@
     <meta name="viewport" content="width=device-width" />
   </head>
 <body>
-
   <div class="app-container">
-    <div class="app-header"><h1>SinDy Bot V.5</h1></div>
+      <div class="app-header"><h1>SinDy Bot V <h2>0.4</h2></h1></div>
     <div class="app-content">
       <div class="time-indicator"><div class="time-indicator-content">8:20</div><hr /></div>
     </div>
     <div class="app-footer">
       <div class="app-footer-inner">
         <div class="mic">
-          <div class="ready"><a href="#" id="start"><img src="i/mic.svg" alt="Tap me to speak" /></a></div>
+          <div class="ready"><a href="#" id="start"><img src="i/mic.svg" alt="Tap me to speak!" /></a></div>
           <div class="listening"><span class="listening-1">.</span><span class="listening-2">.</span><span class="listening-3">.</span></div>
         </div>
-
       </div>
     </div>
   </div>
-
-  
-
 </body>
 </html>
