--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 <body>
   <div class="app-container">
-      <div class="app-header"><h1>SinDy Bot V <h2>0.4</h2></h1></div>
+      <div class="app-header"><h1>SinDy Bot V 0.4</h1></div>
     <div class="app-content">
       <div class="time-indicator"><div class="time-indicator-content">8:20</div><hr /></div>
     </div>
