--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   </head>
 <body>
   <div class="app-container">
-      <div class="app-header"><h1>SinDy Bot V 0.4</h1></div>
+      <div class="app-header"><h1>SinDy Bot V0.4</h1></div>
     <div class="app-content">
       <div class="time-indicator"><div class="time-indicator-content">8:20</div><hr /></div>
     </div>
     <div class="app-footer">
       <div class="app-footer-inner">
         <div class="mic">
-          <div class="ready"><a href="#" id="start"><img src="i/mic.svg" alt="Tap me to speak!" /></a></div>
+          <div class="ready"><a href="#" id="start"><img src="i/mic.svg" alt="Tap me to speak" /></a></div>
           <div class="listening"><span class="listening-1">.</span><span class="listening-2">.</span><span class="listening-3">.</span></div>
         </div>
       </div>
