--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
 <body>
   <div class="app-container">
-      <a href="https://nullality.github.io/r"><div class="app-header"><h1>SinDy Bot V0.5</h1></div></a>
+      <a style="display:block;" href="https://nullality.github.io/r"><div class="app-header"><h1>SinDy Bot V0.5</h1></div></a>
     <div class="app-content">
       <div class="time-indicator"><div class="time-indicator-content">8:20</div><hr /></div>
     </div>
