--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
     <title>SinDy Bot V0.5</title>
     <link rel="stylesheet" type="text/css" href="normalize.css" />
     <link rel="stylesheet" type="text/css" href="layout.css" />
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <script type="text/javascript" src="ApiAi.js"></script>
     <script type="text/javascript" src="app.js"></script>
     <meta name="viewport" content="width=device-width" />
   </head>
 <body>
   <div class="app-container">
-      <a style="display:block;" href="https://nullality.github.io/r"><div class="app-header"><h1>SinDy Bot V0.5</h1></div></a>
+      <div class="app-header">
+          <h1>SinDy Bot V0.5</h1> 
+          <a style="display:block;" href="https://nullality.github.io/r">
+          <i class="fa fa-info-circle fa-4x" aria-hidden="true"></i>
+          </a>
+  </div>
     <div class="app-content">
       <div class="time-indicator"><div class="time-indicator-content">8:20</div><hr /></div>
     </div>
