--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>SinDy Bot V0.5</title>
     <link rel="stylesheet" type="text/css" href="normalize.css" />
     <link rel="stylesheet" type="text/css" href="layout.css" />
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="ApiAi.js"></script>
     <script type="text/javascript" src="app.js"></script>
     <meta name="viewport" content="width=device-width" />
