--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <title>SinDy Bot V0.5</title>
+    <title>SinDy Bot</title>
     <link rel="stylesheet" type="text/css" href="normalize.css" />
     <link rel="stylesheet" type="text/css" href="layout.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -13,9 +13,10 @@
 <body>
   <div class="app-container">
       <div class="app-header">
+          
           <h1>SinDy Bot V0.5</h1> 
           <a style="display:block;" href="https://nullality.github.io/r">
-          <i class="fa fa-info-circle fa-4x" aria-hidden="true"></i>
+          <i class="fa fa-info-circle" aria-hidden="true"></i>
           </a>
   </div>
     <div class="app-content">
