--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="app-container">
       <div class="app-header">
-          <img src="/i/Cindyfive.png" width="48" vertical-align="middle" padding-top="10px" float="left" clear="both">
+          <img src="/i/Cindyfive.png" width="48" vertical-align="middle" padding-top="10px" float="left" clear="both"/>
           <h1 float="left" clear="both">SinDy Bot V0.5 <a style="display:block;" href="https://nullality.github.io/r"><i class="fa fa-info-circle" aria-hidden="true"></i></a></h1> 
   </div>
     <div class="app-content">
