--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="app-container">
       <div class="app-header">
           <img src="/i/Cindyfive.png" width="48" style="float:left;clear:both;" vertical-align="middle" padding-top="10px" float="left" clear="both"/>
-          <h1 float="left" clear="both">SinDy Bot V0.5 <a style="display:block;" href="https://nullality.github.io/r"><i class="fa fa-info-circle" aria-hidden="true"></i></a></h1> 
+          <h1 style="float:left;clear:both;" float="left" clear="both">SinDy Bot V0.5 <a style="float:left;clear:both;display:block;" href="https://nullality.github.io/r"><i class="fa fa-info-circle" aria-hidden="true"></i></a></h1> 
   </div>
     <div class="app-content">
       <div class="time-indicator"><div class="time-indicator-content">8:20</div><hr /></div>
