--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="app-container">
       <div class="app-header">
-          <img src="/i/Cindyfive.png" width="48" style="float:left;clear:both;vertical-align:middle;padding:20px auto auto 20px;"/>
+          <img src="/i/Cindyfive.png" width="48" style="float:left;clear:both;vertical-align:middle;padding-top:20px;padding-left:20px;"/>
           <h1 style="text-align:center;">SinDy Bot V0.5 <a style="float:left;clear:both;display:block;" href="https://nullality.github.io/r"><i class="fa fa-info-circle" aria-hidden="true"></i></a></h1> 
   </div>
     <div class="app-content">
