--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>SinDy Bot</title>
     <link rel="stylesheet" type="text/css" href="normalize.css" />
     <link rel="stylesheet" type="text/css" href="layout.css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="ApiAi.js"></script>
     <script type="text/javascript" src="app.js"></script>
     <meta name="viewport" content="width=device-width" />
@@ -13,8 +12,8 @@
 <body>
   <div class="app-container">
       <div class="app-header">
-          <img src="/i/Cindyfive.png" width="48" style="float:left;clear:both;vertical-align:middle;padding-top:20px;padding-left:20px;"/>
-          <h1 style="text-align:center;">SinDy Bot V0.5 <a style="display:block;" href="https://nullality.github.io/r"><i class="fa fa-info-circle" aria-hidden="true"></i></a></h1> 
+          <a href="https://nullality.github.io/r"><img src="/i/Cindyfive.png" width="48" style="float:left;clear:both;vertical-align:middle;padding-top:20px;padding-left:20px;"/></a>
+          <h1 style="text-align:center;">SinDy Bot V0.5</h1> 
   </div>
     <div class="app-content">
       <div class="time-indicator"><div class="time-indicator-content">8:20</div><hr /></div>
