--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <title>SinDy Bot</title>
+    <title>SinDy Bot V.69</title>
     <link rel="stylesheet" type="text/css" href="normalize.css" />
     <link rel="stylesheet" type="text/css" href="layout.css" />
     <script type="text/javascript" src="ApiAi.js"></script>
@@ -13,7 +13,7 @@
   <div class="app-container">
       <div class="app-header">
           <a href="https://nullality.github.io/r"><img src="/i/Cindyfive.png" width="48" style="float:left;clear:both;vertical-align:middle;padding-top:20px;padding-left:20px;"/></a>
-          <h1 style="text-align:center;">SinDy Bot V0.5</h1> 
+          <h1 style="text-align:center;">SinDy Bot V0.69</h1> 
   </div>
     <div class="app-content">
       <div class="time-indicator"><div class="time-indicator-content">8:20</div><hr /></div>
